issue #17 Change the background color and set the align of recipes like center. Add semitransparent line with name to recipes icon.

--- a/recipes_adviser/static/css/styles.css
+++ b/recipes_adviser/static/css/styles.css
@@ -123,47 +123,44 @@
 
 /* Styles for the area where the list of recipes are outputed. */
 .recipe-list {
-  display: flex;
-  width: 80%;
-  margin: 10%;
-  margin-top: 50px;
-  align-items: center;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .recipe-icon {
-  margin: 20px;
   width: 300px;
-  height: 300px
+  height: 230px;
+  margin-right: 1%;
+  margin-top: 3%;
+  overflow: hidden;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  padding: 0px;
+  
+  display: inline-block;
+  float: none;
+}
 
-  border-radius: 30px;
+.recipe-icon img {
+  vertical-align: middle;
+  width: 100%;
 }
 
 .recipe-icon h2 {
   position: absolute;
-  left: 15px;
-  top: 35px;
 
+  height: 50px;
   width: 100%;
-  padding: 0px;
+  margin-top: 0px;
+  background: rgba(0, 0, 0, 0.55);
+  text-align: left;
 }
 
-.recipe-icon h2 span {
-  padding: 10px;
-
+.recipe-icon span {
+  position: absolute;
   color: white;
-  font: bold 18px Helvetica, Sans-Serif;
+  font: bold 20px Helvetica, Sans-Serif;
   letter-spacing: -1px;
 
-  background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.7);
-  border-radius: 0px 18px 18px 0px;
-}
-
-.recipe-icon img {
-  width: 100%;
-  padding: 0px;
-  margin: 0px;
-
-  box-shadow: 0 0 20px rgba(0,0,0,0.4);
-  border-radius: 30px;
+  margin-left: 10px;
+  padding-top: 10px;
 }
